--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -268,7 +268,7 @@ jobs:
         run: |
           for example in examples/*.rs
           do
-            cargo run --example "$(basename "${example%.rs}")" ${{ env.CARGO_FEATURES }} --features="$(cat ${example%.rs}-features)"
+            cargo run --example "$(basename "${example%.rs}")" ${{ env.CARGO_FEATURES }}
           done
 
   cargo-fmt:
